--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "base64-img": "^1.0.4",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-file-base64": "^1.0.3",
     "react-moment": "^0.9.7",
